removed wrapper stuff and starting the server as normal java program+fixed windows long classpath issue
git-svn-id: https://svn.wso2.org/repos/wso2/carbon/platform/trunk@126077 a5903396-d722-0410-b921-86c7d4935375